# mork

./: .gitignore  CMakeLists.txt  README.md
core/: Timer.cpp  Timer.h  stb_image.cpp
examples/: CMakeLists.txt  ex00-framework.cpp  ex01-rendering1.cpp  ex02-matrices1.cpp  ex03-matrices2.cpp  ex04-fonts1.cpp  ex04-lights1.cpp  ex05-camera_and_scene.cpp  ex06-lights01.cpp  ex07-lights02.cpp  ex08-lights03.cpp  ex09-model01.cpp  ex10-model02.cpp  ex11-normal_mapping.cpp  ex12-resources.cpp  ex13-atmosphere.cpp  example-matrices1.cpp
glad/: .glad.c.swp  glad.c  glad.h
math/: vec2.h  vec3.h  vec4.h
mork/: CMakeLists.txt
mork/atmosphere/: model.cc  model.h
mork/core/: Log.h
mork/imgui/: imgui_impl_opengl3.cpp
mork/math/: box3.h  mat3.h  mat4.h  quat.h  vec3.h  vec4.h
mork/render/: Bindable.h  Font.cpp  Font.h  FontEngine.cpp  FontEngine.h  Framebuffer.cpp  Framebuffer.h  GPUBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Program.cpp  Program.h  StaticUniform.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBuffer.h
mork/resource/: ResourceDescriptor.cpp  ResourceDescriptor.h  ResourceFactory.h  ResourceManager.cpp  ResourceManager.h  ResourceTemplate.h
mork/scene/: Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h
mork/ui/: EventHandler.h  GlfwWindow.cpp  GlfwWindow.h  Window.cpp  Window.h
mork/util/: BBoxDrawer.cpp  BBoxDrawer.h  File.cpp  File.h  MeshUtil.cpp  MeshUtil.h  ModelImporter.cpp  ModelImporter.h  Time.cpp  Time.h  Util.cpp  Util.h
render/: Bindable.h  Program.cpp  Program.h  StaticUniform.h  Texture.h  Uniform.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBuffer.h
src/core/: DebugMessageCallback.cpp  DebugMessageCallback.h
src/math/: mat3.h  mat4.h
src/render/: Texture.cpp  VertexBuffer.h
src/ui/: EventHandler.cpp  GlfwWindow.cpp  Window.cpp  Window.h
test/: CMakeLists.txt  testBox3.cpp  testBuffer.cpp  testCamera.cpp  testFramebuffer.cpp  testFrustum.cpp  testLog.cpp  testMat4.cpp  testMesh.cpp  testMeshUtils.cpp  testProgram.cpp  testSceneNode.cpp  testTexture.cpp  testUtil.cpp  tests_main.cpp
ui/: EventHandler.h  GlfwWindow.cpp  GlfwWindow.h
